# asistente-corporativo

./: .gitignore  README.md  chat_tq_localai.py  pyproject.toml  test_tokens.py
scraping/: scraper_chunking.py  scraper_markdown_summary.py  scraper_trafilatura.py  scraper_url_extractor.py
scraping/output/: dataset.json  dataset_chunked.json  entrada_ia_chunks_estructurada.md  extracted_urls.txt  tq_system_prompt.md
